=============0.1.0=============
Ability to adjust character color prior to starting Freeplay.
Water icon changed.
Changed player starting items.
Disabled starting cutscene.