@@ -1,5 +1,10 @@
+if not nyohoki then nyohoki = {} end
+
+require("ジャンクション")   -- junction
+require("かんすう")         -- function
 require("オーバーライド")   -- override
 require("めいぼ")           -- list of names
+require("ぎじゅつ")         -- technology
 
 
 
